--- a/Practicals/04_decision_trees/trees_and_forest.ipynb
+++ b/Practicals/04_decision_trees/trees_and_forest.ipynb
@@ -409,8 +409,9 @@
    "source": [
     "# TODO: Handle missing values for both predictors and target\n",
     "\n",
-    "data_cart=data_cart[pd.isnull(data_cart['RainTomorrow'])==False] #(TODO)\n",
-    "data_cart=data_cart.fillna(data_cart.mean()) #(TODO)"
+    "data_cart=data_cart[pd.isnull(data_cart['RainTomorrow'])==False] #(TODO)  \n",
+    "                                                    #object can't be replaced by mean, therefore need to be done separetely\n",
+    "data_cart=data_cart.fillna(data_cart.mean()) #(TODO)    "
    ]
   },
   {
@@ -3026,7 +3027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
